探知の即席火鉢をForge 1.20.1向けに補正